fixed navigation page jump

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,7 @@ html {
   height: 100%;
   background-color: var(--white);
   font-family: "Space Mono", monospace;
-  scroll-padding-bottom: 1200px; /* Adjust value as required */
+  scroll-padding-bottom: 90%; /* Adjust value as required */
 }
 
 /* Navbar styles */
